# bdocs

./: .flake8  .gitignore  Makefile  README.md  app.py  pyproject.toml  repl.py  requirements.txt  setup.py
.github/: dependabot.yml
__MACOSX/test/: ._404.xml
adocs/: adocs.py  adocs_docpath.py  adocs_projects.py  adocs_roles.py  adocs_subscriptions.py  adocs_teams.py  adocs_users.py  base_resource.py  resources.py  utils.py
adocs/docpaths/: docpath.py
adocs/projects/: project.py
adocs/roots/: root.py
adocs/teams/: team.py
adocs/users/: user.py
api/: resources.py
application/: app_config.py
application/db/: database.py  entities.py  loader.py  owner_member.py  roles.py  session_factory.py  standup.py
application/projects/: project.py
application/roots/: doc_root_management.py  paths_finder.py
application/subscriptions/: checker.py  (+3 more)
bdocs/: bdocs.py  bdocs_config.py  block.py  brepl.py  building_docs.py  building_metadata.py  deleter.py  indexer.py  multi_building_docs.py  root_info.py  rooter.py  search_options.py  searcher.py  simple_deleter.py  simple_mover.py  simple_rooter.py  simple_rotater.py  simple_user.py  simple_walker.py  simple_writer.py  simple_zipper.py  tree_util.py  user.py  walker.py
config/: app-config.ini  config.ini
designs/: about the product.txt  git_change_file_sync_decision_matrix.xlsx  sketches.pptx
tests/: test_api_ui.py  test_bdocs.py  test_building.py  test_config.py  test_git.py  test_metadata.py  test_multi_building_docs.py  test_rotate.py  test_rules.py  test_search.py  test_tree_util.py
tmp/: readme.txt
(+25 files in other folders)
