[tool.poetry]
name = "bdocs"
version = "0.0.0.1"
description = "A library to provide mutation methods and higher level features to Cdocs."
authors = ["David Kershaw <dk107dk@hotmail.com>"]
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup"
]

[tool.poetry.urls]
"Github" = "https://github.com/dk107dk/bdocs"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"
black = "^23.12.1"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
cdocs = "^0.0.39"
dulwich = "^0.21.7"
whoosh = "^2.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


